figured out how to stop that weird extra space on the right of screen

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,6 @@
   font-family: 'Vesper Libre', serif;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  overflow-x: hidden;
+  width: 100%;
 }
